lst-看板样式调整

--- a/src/main/resources/templates/kanban/hl_area.html
+++ b/src/main/resources/templates/kanban/hl_area.html
@@ -221,7 +221,7 @@
                     <img id="div_li_huan_img" src="" style="width:100%;height: 648px;padding:10px;padding-top:20px;">
                 </div>
                 <!-- 环  -end-->
-                <div class="chart_main " style="width:666px;height: 650px;margin:10px;color:#fff" id="div_li_ce">3</div>
+                <div class="chart_main " style="width:666px;height: 650px;margin:10px;color:#fff" id="div_li_ce"></div>
             </div>
             <div class="center_text1" style="position: relative;width:1475px;height:315px;">
                 <!--左上边框-->
@@ -402,6 +402,7 @@ var context = [[@{/}]];
 var permList=[[${line}]];
 var woList = [[${WoList}]];
 var KanbanList = [[${KanBanList}]];
+console.log(KanbanList)
 var Rotime = [[${Rotime}]];//-刷新获取所有工单
 var Rotime_1 = [[${Rotime_1}]];//-工单切轮播
 var Rotime_2 = [[${Rotime_2}]];//-人机料法环测轮播
