--- a/src/main/resources/templates/kanban/hl_area.html
+++ b/src/main/resources/templates/kanban/hl_area.html
@@ -34,6 +34,42 @@
             color: #fff;
             cursor: pointer;
         }
+        
+         .banner {
+        position: fixed;
+        width:100%;
+        left:50%;
+        bottom:5px;
+    }
+    .active{
+       
+    }
+    .dots {
+        /* background-color: gray; */
+        position: absolute;
+        height: 48px;
+        bottom: 4px;
+    }
+    .dot {
+        float: left;
+        display: block;
+        width: 20px;
+        height: 20px;
+        border: 6px solid #fff;
+        position: relative;
+        border-radius: 50%;
+        opacity: .4;
+        margin:6px; 
+    }
+    .dot:hover {
+        opacity: 1;
+        background-color: #fff;
+    }
+    .active{
+       background-color: #fff;
+       opacity: 1;
+        z-index:100;
+    }
     </style>
 </head>
 <body topmargin=0 leftmargin=10>
@@ -384,7 +420,18 @@
             </div>
         </div>
         
-        
+        <div class="banner">
+		    <div class="dots" id="dots">
+		        <!-- <i class="dot active"></i>
+		        <i class="dot"></i>
+		        <i class="dot"></i>
+		        <i class="dot"></i>
+		        <i class="dot"></i>
+		        <i class="dot"></i>
+		        <i class="dot"></i>
+		        <i class="dot"></i> -->
+		    </div>
+		</div>
     </div>
 </div>
 
