lst-页面增加不加载缓存机制

--- a/src/main/resources/templates/kanban/hl_company.html
+++ b/src/main/resources/templates/kanban/hl_company.html
@@ -6,7 +6,9 @@
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 <meta name="viewport"
 	content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-
+<meta http-equiv="pragma" content="no-cache">     
+<meta http-equiv="Cache-Control" content="no-store, must-revalidate">      
+<meta http-equiv="expires" content="Wed, 23 Feb 2000 08:00:00 GMT">
 <title>公司看板</title>
 <link href="css/bootstrap.css" rel="stylesheet">
 <link rel="stylesheet" href="../kanban/css/base.css">
