--- a/src/main/resources/templates/kanban/hl_area.html
+++ b/src/main/resources/templates/kanban/hl_area.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-    
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+    <meta http-equiv="pragma" content="no-cache">     
+    <meta http-equiv="Cache-Control" content="no-store, must-revalidate">      
+    <meta http-equiv="expires" content="Wed, 23 Feb 2000 08:00:00 GMT">
     <title>生产区域看板</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="../kanban/css/base.css">
