--- a/src/main/resources/templates/kanban/hl_area2.html
+++ b/src/main/resources/templates/kanban/hl_area2.html
@@ -7,6 +7,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta http-equiv="pragma" content="no-cache">     
+<meta http-equiv="Cache-Control" content="no-store, must-revalidate">      
+<meta http-equiv="expires" content="Wed, 23 Feb 2000 08:00:00 GMT">
+
 <link rel="stylesheet" href="../layuiadmin/layui/css/layui.css"
 	media="all">
 <script src="../layui/layui.js"></script>
